# ChangeLog for sys-apps/tcp-wrappers
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/tcp-wrappers/ChangeLog,v 1.49 2014/01/14 20:20:33 grobian Exp $

  14 Jan 2014; Fabian Groffen <grobian@gentoo.org>
  tcp-wrappers-7.6.22-r1.ebuild:
  Fix for Prefix

*tcp-wrappers-7.6.22-r1 (25 Nov 2013)

  25 Nov 2013; Michał Górny <mgorny@gentoo.org> +tcp-wrappers-7.6.22-r1.ebuild:
  Enable multilib support, bug #488390. Acked by Chainsaw.

  14 May 2013; Tim Harder <radhermit@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  Inherit multilib eclass for get_libdir usage and drop empty DEPEND.

  14 May 2013; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Remove proxy-maintainers from metadata.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  17 Feb 2013; Zac Medico <zmedico@gentoo.org> tcp-wrappers-7.6.22.ebuild:
  Add ~arm-linux keyword.

  19 Aug 2012; Christoph Junghans <ottxor@gentoo.org>
  tcp-wrappers-7.6.22.ebuild:
  added prefix keywords

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> tcp-wrappers-7.6.22.ebuild:
  keyword ~amd64-fbsd

*tcp-wrappers-7.6.22 (01 Jan 2012)

  01 Jan 2012; Mike Frysinger <vapier@gentoo.org> +tcp-wrappers-7.6.22.ebuild,
  +files/tcp-wrappers-7.6-headers.patch,
  +files/tcp-wrappers-7.6-redhat-bug11881.patch, metadata.xml:
  Migrate to Debian patchset which includes a lot more patches #158036 by
  Wolfram Schlich and #269833 by Jason. Tweak fix_options func definition
  #360749 by Alexander Kolesen. Add USE=netgroups so people can optionally
  enable @netgroups syntax. Add USE=static-libs support #378271 by Agostino
  Sarubbo.

  08 Oct 2010; Mart Raudsepp <leio@gentoo.org> tcp-wrappers-7.6-r8.ebuild:
  Drop to ~mips

  17 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild:
  Cleanup ebuild/source/patchsets.

  11 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  tcp-wrappers-7.6-r8.ebuild: