@@ -7,15 +7,25 @@ AUX tcp-wrappers-7.6-redhat-bug11881.patch 956 SHA256 b8b3bbbe223d3496b25070d1fb
 DIST tcp-wrappers-7.6-patches-1.0.tar.bz2 16128 SHA256 dcb10f194684b16ae6aa9faf05dd8b063d81a3dde1431b664260dcf385089256 SHA512 b020006ce3f7578c0ab3c7b8cb71a3bb00ab0ae3d595b0612fa6464041e06905fb431acb85a759de90407ef502aa75191abed6225a57586abc7bbd1801cea969 WHIRLPOOL 819afd55ac96abe8e737592ac5663f3d41e96837eafe2511018cf6dda17dd2cb13ed8930ff0bf50a3d63a45fb834897586f78b10f0d8a55d31934fd970147903
 DIST tcp-wrappers_7.6.q-22.debian.tar.gz 41730 SHA256 0ff28337c5effe4f91e7ea43ddd65fc629c06922326f5ef2804f70943be64fb3 SHA512 cee45f265c34ec1c4e9e81d54be636dcd9702964f9cf5bb076f72d6772d2dbc638d2ef366560b51c24a216724807826bb3b7bf9d5d0f5c0923b71de7d0b002a8 WHIRLPOOL 4a22c083d3bfe18af020ea48663ab3eb5a77d613665bbeb935daffcce64641d66f5c32a88ef4e4dbf8b4edfe9d71bfc4e35601451d065c10806ea726430d2aa8
 DIST tcp_wrappers_7.6.tar.gz 99438 SHA256 9543d7adedf78a6de0b221ccbbd1952e08b5138717f4ade814039bb489a4315d SHA512 2d9d003791f8d00912a36ae00579e2b8dd7ad8a7bf8eae259659bcaf5365b150540ff6c93c91765872c76041579b7a02b6e3c64528fb7f8235680399ba1d9dac WHIRLPOOL e04861d03a49dd6d6d5cd9eba86732a40e79deff39d981a5e883bcfae4979c6e1c2a388eabd84691927b159e606a5649073473a717cb62c12cbd8546d75635bf
-EBUILD tcp-wrappers-7.6-r8.ebuild 1991 SHA256 cb8bc7c15c1a4e3891e98ff27e6116d0f8a0bef23740f96602d7e07090175ba8 SHA512 ff4dc2d603fae7ac3123750c1541cd1167975620e4d9ca80c945a5ab110cd6c0db310390d0375a5785b704254103ed4002dec50e21321f3d367c318b614dc5ce WHIRLPOOL e596af98af7c925b9f7f07610780324e861258bea366542c5dea014cf446f38e8e66fe11127507bb2e58f4067dbe9e9e9520139e8d1ed324d04263f6c6d54258
-EBUILD tcp-wrappers-7.6.22-r1.ebuild 2789 SHA256 e7348b0284e4b2309eeebaea380dcb33cb0ace3b6ada04a0a89d2b605fbbd95b SHA512 aa05fe304b6dafaa5a6e5a25d927ea3a76003cd8474d659d5690a8bf0e900ebb22e3a0e705aa2e2db3e165437bcc20631aed127b6db25db626e2d4bfe3305c94 WHIRLPOOL 8316c0556a7a4ca4d9abcfd55ab54f496c00a7ab9966d92dc11ccb2e799f6c20867b7bc1667283f8788a682ee77897bad57b6715fa034eb3bac9b201566d5d02
-EBUILD tcp-wrappers-7.6.22.ebuild 2503 SHA256 f5debb7a18e4a2894f55b441b3cd7231d4bef05b14ae503928f3a0191146c574 SHA512 9e2a5b9cc1ddc607d085db7745ddcef3cf515e3e85503da85f2ab14c26233769a43acc66fc21fbd94b2c1f263f574694469fdc4de08db79d16e0c65f3b4e5b1a WHIRLPOOL cd77041fae3d8d4257451f61f072ff8c64b340586eab2f1a8f4490676d40ae3c1bc6b68406d4b25fd458f41a966cea49926cf2f964e89a0cdde1c78ca510d68d
-MISC ChangeLog 7373 SHA256 de575f8fdf64e78ccbf65940fd1c5b3ba045bb81a360e1e3f50b83a173212b8e SHA512 17e5fa21e21cbc56dece95e0b87c1319e8692f87b9f06362abcc053409c246fc265b6020d48de5bf20bc04bd94d44716ad85a3fa37bd87bd31778dfd42f2bb4d WHIRLPOOL 1a335568ea3a9623c61e461bac562e1459e02677a1cbc7c41aa31e7d5ddaa54789e16c43b177ee6c4576555a7ac71a5a6ed428bb2769203ba035393e993782cb
+EBUILD tcp-wrappers-7.6-r8.ebuild 1994 SHA256 472c465ba36c51b250cd7d8db3eb6c0c09d8c3f129bd32f62ad705c394527a49 SHA512 c35dc3f0a0f5fc0bdb6f58344afc5f5d3aa5d4ece505dfc8fca2dce68e00e6a8dff21adad5888c9b65e4721afa587014b0ab22fefedc05ee06bbadef72d99350 WHIRLPOOL d4115a382165c638a517b6be90133b37e966c454343b63c4df205164496ab1515a98cb12ce54d959f2e24ac6ef3046e90d16723b5787bef608711908fbd28b0b
+EBUILD tcp-wrappers-7.6.22-r1.ebuild 2795 SHA256 4d341d14f23e698f19dd3c9851f6f283b71819ce783171c9baf536496216b2e8 SHA512 4772d25a26af479d234b4d25e0afbfd438040798c3b73f4e0ff0347a7b8d470cb5a929a10d82409f80e82df523aec3e51ee64fc830e9338476630f3a2ee62e0f WHIRLPOOL 121b44e9241e29db8b1a501432ec650bcca3df10caec5185c40739f60059ef99be3807ca259d46ff250819bb955c353b4979dfcb6b4b8ee17de3f6cf741557e6
+EBUILD tcp-wrappers-7.6.22.ebuild 2509 SHA256 d43db3e7012c978557d50d6db91e3cd9bf8ef18ce94ef882394cc59fd17666ad SHA512 3cd63abbe12a4e7d7be0e2852ea650b6100affb09d3ce793da64e69cb219c7222763162d071939ae377597d91e64694914e9ab7f637797ef48cdde7d64b0d665 WHIRLPOOL d6a0d1134fe49d78da891db756fb9486ded00e6181a980176b48e6055c6709fcc7b7ccaf2676e49195573bb5a41eec56d4668337004456c59a015f237eabdac2
+MISC ChangeLog 7530 SHA256 171546ea8bd867e085b537d3fc1394e413aa9bcf561535841e73992491b31e8b SHA512 b94c796b12fc187367b48f433dad58b59687320bb012451a8d0ac38e0261f370a8b135402cb6556c0141e64e821d746439b9e4e5b0fd684ebed6c69c94842205 WHIRLPOOL 21157308b0a039a6f76574dff27b54566345e7b08dc7b1a28707f96d4f981290efb4aaddbafa33204b41a53e465ee56d416d9e13c8cd8495d551394a38244e37
 MISC metadata.xml 349 SHA256 81a5bdc0c787284f58b68dd7e3db3cfe6652b336d03698826dd86a705626b725 SHA512 b3c8aa5ea459990ef57ffa5b66e230ea6cf7aa8acd3481183f2dbe7394d98add0a2712cd5b74fd494ca0372e79097c3e2d712514a5f20815c7673372351f5755 WHIRLPOOL 2c28eb2f649bb90041c36b7c9b5fe5ec5826382a59a13f64846bd99746172bdea5daa8d3c025d74402ec9d8beb8a675ec536405b2b223aeffd9122d9af8342cd
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (Darwin)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlLVnBMACgkQX3X2B8XHTonTJQCfcFcXJ4dXdOlzqC+AzQqcLUnm
-SsYAn31E2pyhPaggaZkKa5Og27x5jEF4
-=H7Xt
+iQIcBAEBCAAGBQJS2fkqAAoJEPGu1DbS6WIA7e4P/01YKEAaEJ7uy1hoomIWKZBi
+WrOthtNzm9QNSIwXekcZSxIBJpQ8UNKqyC0RWjZNym2Dxzb9j2G1zs169/JZ13YA
+vbCeWyPO1HWDMP2W6ST4M+ifyid/zw7e/Bs1CCU7b8xWx3XQlRZxuNw3+VO4TyBc
+lXlE87MefNYCJhNRjgRe/4HfbMBnN5h37o+5U/jU2jGyxehvHvT0/U+Z1kDhOU8w
+9PZ7Pub14i2L4cNLiBQv3CnPV09U5CvClcUqyhpzgxSMSRRcchG0pEK0ru/eY7uD
+Mcgy4QyBBlQx69po3Qtj8vSdlg25d9z9KoWoEDfUBmH4MFSzRHXtb7BKWG8E1vaY
+fuxYFNjE1wnAawADYwAkfOXKfOLTZ8ZLXX19vkWPJYrSQlq55btKBhLkNX1gZsSZ
+1Ncezb0bgx+fvrPJumA/V1fLZHJcIztmVZNg0NRUuDDMli+CYidjbOWFzeECaqMM
+Wfe31ZBLoSSLUKYHBiZtWMgRlpGrEEYrBwxqHpgGKf9IwcWFXZgUZ2auoo2gEiBD
+uc6k3dJ9lgaujbargDy/TXvkuHq8eKopoIrdceiWvLJ6YO9WPcsmSYf3ei9RcRY/
++Z3DhA+K2Y/CoHo4cpDdEv9la/bUwa26DTVHw0i/8nQA8ilXFWWcAsXalY2lM2cQ
+oN6P8d9r12DTRlVNZnyF
+=chSA
 -----END PGP SIGNATURE-----
