@@ -11,24 +11,24 @@ DIST xinetd-2.3.14.tar.gz 301703 SHA256 760e0e617c609a0509ef63fc7e9580d2f1d88c61
 DIST xinetd-2.3.15.tar.gz 309774 SHA256 bf4e060411c75605e4dcbdf2ac57c6bd9e1904470a2f91e01ba31b50a80a5be3 SHA512 9d6fee1fbc90329629d84086ae7de5cd51c25af7b68e52aa704d6f74bee5f0e3d54ca1bcf780f90f74ddc8d336ae0abb5e5e368d43c426a26b8dd2c4676d26aa WHIRLPOOL 5bcf69b2cfac3b3713648da666e4c98d62caea4c506be9dc5cc84f1acdc643812460a158b092705274d7452d394d3f2c03b5635f135f5d900bb6a5406f0350c2
 EBUILD xinetd-2.3.14-r1.ebuild 1420 SHA256 320fcaf82f50e7857569ab9e7559af257c2cd156384e9cd41d68e0b552487a99 SHA512 b5189e1ede08a9efe1984127d37a2981eb22749da6ce36e29c306752211b2abd7ea53e9d6286f4a8150acd1deb6387dde81c815cf446cd40372408a7a52c35d6 WHIRLPOOL 561a4a5d5c75c1e71ede91d27c94e45a934dfbeaceeb329d421b7cc8d48f30069839bef98fbf7ad106dc8726d816160304def524a30cabe2dd2072093f2f16e8
 EBUILD xinetd-2.3.14.ebuild 1227 SHA256 f50f4fe402cfcff34ed1023b986f91867c00e45f14da48e1aa0d30485b9c8d72 SHA512 3134fc014e49550a4a372eccc6a5df594e810fe6a5644a22cc071c98b20211f2a456fa98a33f61682a2bfb0019a41ba8e81b5945359e5940d2f06b70c8d8fcd5 WHIRLPOOL 855a6b0b1a991a36ce6584db324411608e3cb22abda7d26cecaceafb8300de461559fd0f30cc29d87c776c74ab480e4264aa723c57012c3f7d546f7765883ebf
-EBUILD xinetd-2.3.15-r1.ebuild 1552 SHA256 f693989956320c731d435db8fcaa590016f16bf752f69fd818b45f32d89a8cbb SHA512 dbd87130743ab1dc19d876f143b62587253480dc6af4ed7e4955daea194f3cf11f466558ff6c1651f377db52034bdd705c400f160fcb5ba46059396011cce6f9 WHIRLPOOL d4fd4387c0e20984d416781b6b135da0b4cfb37136a726daeecddbf61a1e83ff76e4f5e4f9ce604d6958c7b5928dde2e4b20476f21bb9b6a23099f65827d10f1
+EBUILD xinetd-2.3.15-r1.ebuild 1559 SHA256 86d76d845ca73e9988330ca1f292d89208cd44cb0d6ef1ab2bd7a4192462f545 SHA512 dac878a8248f4a9f4a68833764c92061bc12ebeb0411ce6f84f91be87474ac0c40d8481f612d8c4041b962f5799181c1f0ebdf537075c81d4783dcf2ec64c979 WHIRLPOOL 2a49429b46a42c797aac7d46a3b686600810cb02964bbe352d4347ebaefffc7a11bdac13989dce95842a704b390fdd2363cbeff505fe556b847cb40a6d6c1737
 EBUILD xinetd-2.3.15.ebuild 1501 SHA256 c1732096b79b10d728244431e2b73065b581e2e277fcfc88c2f2e32022a6b21b SHA512 a4c9f595391587a1bdb4451b177221509b0a4e8611cdba3bf4fb3f0eb73822d9d6b465c0c9d478e6ac33f30e2a4646426c5906af4669ac76a2f99eccad704a7f WHIRLPOOL 044fbd3dc27734a715a3a8e41508baac1f9d6b73ebbe0a512744d03a1e752f0e03ba47b0d551f21c55fbfb06ead2c1ff2b4e735222bcebcd4c853f38c01b2951
-MISC ChangeLog 10532 SHA256 a8827729ed14f153980535667b90daf2826ee1464514dd634174323fa3532b47 SHA512 d4a9d41c89e11ee1332314dd65084b36225a3d72ce83a9e2389ab97f58345b48c3ad945510e1184b3ed7cc0cf1949ef5c660f143edbcf28aa7ad03c337482752 WHIRLPOOL 0b30e8f6fea08a5d345f5be9cc86856e4fb25bf136e22f6ca7de6e8d8ec4bc169deadb3b617f66620aa46ab4343ddc4ba4d3f2c519dc85291b16e82e40267b8e
+MISC ChangeLog 10626 SHA256 17488f6ac73e66c92f7282c2c35c24f94c656fd4ab5e4c07ad67590e8e7ddaa6 SHA512 807db5869e348c8cfb40b37ec25cd8ae7a50b3c05b0769b073c168b68845dc33656e9e4f87ab6f9f96194d12ddc4e7afd67afd3a9b01ea0361169b12b1db69ba WHIRLPOOL 5bec45410e69a57ee809ce4f372389c5c1589c4c8b11cc98b1872a70de7ab88ba1c961ef353b1c88bff9e4d9f4909a9f143dd04ff0359c0e908ad720149f0815
 MISC metadata.xml 223 SHA256 4e43d08b836aef8907db5fad1cbc4209be6052ca799d7bc23777057a04856d5b SHA512 a52575783cb26bcc449e17445e4f8ca6412530e94feb4881b5931cdbd5d7d25570f6995b58629adb1f9c9077e60a71234e4e32c3b02d26b0e3b5251646960313 WHIRLPOOL eeffdd673a1c8f6357c703a221af81061d7edda923b5cd30048cc16fab7ee947c76fc906977068ec109fcbda9547fab2428d92282e395094ee3a9358b9416f3c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS2BI8AAoJEPGu1DbS6WIA1kcP/0Tq3NhBr+oLZdmkhEmc4dLW
-wiDPsOxYNsn7LwKD568++NWC7ivdEc70qWHW8YU97YAy+HATrVUA1ShPqS1rfEwS
-e7NQWg4Gb7JV8Oj0w1HghURrZLSn6ZKiD+UnT9c0EO112j6TtgIJQJKndmcMctMA
-hMYtgo9mkhwIh+QjtffWdSSBtJlqU8Sof/aBQFwCxe6c1TqrfBJaWGaX+Igw/B2s
-fKTiWpSQC9imwhSm5WUc14gFm3C+iuLzLMvUZNp+mJOevfPXEkQwmoIwjUByPBso
-AQMjkH/7flYQ8Bm6b2JUs3CEMAFUjAmEIw5v6wMqfiMSkCod9yjgPF6+gJTRx6Cz
-OPLNgaTHgPc6/WuMgq2zMxHeCKK8zIE5tZZ5ZSczhbY5w9xTDC1PSfWBO1Y6q7gD
-CdBTmyXWT0mhLfyxkolRl19/ZmqPGLaLifK+vvFnmVBJMhpPli1WGEARXpa3a2jh
-YagLs4Hu3YBlxZ4j7nSEv+QHR/pFp7xwuQVVNSQWLrSQ7UeyUS79tbaULA8M76i2
-/CYANGFUO5ebElAMyxv8gNMxaSpxuPgcL0doLMphthlXgX8YgXM0VMd2UPKXcqZY
-OeDxgIynvsNqMSWaDvz5LG/YYV+vpIOJnw7GYF3cDc+dKbxDTN5bo08a7B2zyvS4
-sUDQLTpY1kV9xs+6nm/L
-=5CUM
+iQIcBAEBCAAGBQJS2fktAAoJEPGu1DbS6WIA0RUP/1wK7g6uMTyCCQpYcbZXIr2t
+ZnXyPmf4UeLrQ5iTtCMcay+7NP3J6jwX74UVkKipbdkwZ8xlXWprpDJTkL3LdDWB
+QIpTM5Px6rAHJhHh6kmQADzlbzrmT1G/Y2vT7D5GpqQ4JHasLjYGqm2NCOAn3SvL
+mDWyWG4jYK09yYrJEzoMnmwgBpzweHvhrHnJPlJ6t5CTpIvRa5xfxXD7hAHVP276
+M339yy2L5rBpAg40qE9tDDRCuYqIrXGA76mGNAYhmzSkD/W8eKc5SJJwVSnkWK1B
+O7hRhIMITjsW1dWEPBwvDG/5cMhvevXjdoJ0bMmFpI6THn//RDfkxFR8EkfWDLEv
+4+e3CCYA0wsOW66kNdQUiuAo3x2b38t/u4+AwTEqLCyr8u4+62dIMM9t5MwIH5XE
+bxfB2MTuFK2ks7itjq8tlrvh/WpUi3dwSi/BSDKlEASqFtrI8pdKpuyoiz1vD5K8
+JamSG719VH7Epj7daautptOYjF/QSd52JIUl8OVJkUefsXhn4m0wZ2eJjVhNfBur
+t/Hl2Sq7UazTecbFPQJcWvTKjzw73foP264DCpbfMl/mJ7B1+WlvvBtfVbRnDoKn
+ZzNXjU/djDMCodUFZnwCamCdZaTQiJC9IzmCtp5HXjZM+gZwC745wAy6r8oV8qB9
+VjxhDUq1hLIPZi3DVaLX
+=xtxI
 -----END PGP SIGNATURE-----
