@@ -1,5 +1,8 @@
 # ChangeLog for sys-apps/xinetd
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/xinetd/ChangeLog,v 1.78 2014/01/16 17:09:12 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/xinetd/ChangeLog,v 1.79 2014/01/18 03:46:46 vapier Exp $
+
+  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> xinetd-2.3.15-r1.ebuild:
+  Add arm64 love.
 
   16 Jan 2014; Mike Frysinger <vapier@gentoo.org> xinetd-2.3.15-r1.ebuild:
   Mark m68k/s390/sh stable.
